Simplify blog title
The title is used in SEO and it seems suboptimal to include the
bullet point in that value when it is just for presentation.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings.
-title:          ✧ Music To Wake Up By
+title:          Music To Wake Up By
 description:    "NASA Wakeup Calls: Music to Wakeup By, turned into data"
 url:            "https://nasawakeupcalls.github.io"
 type:           "Dataset"
